[package]
name = "cron-rs"
version = "0.1.5"
edition = "2021"
description = "Systemd timer management platform with error hooks and observability"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
libsql = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.7", features = ["cors", "trace"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
libc = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
rand = "0.10"
hex = "0.4"
http-body-util = "0.1"
rust-embed = { version = "8", optional = true }
mime_guess = "2"
tokio-stream = { version = "0.1", features = ["sync"] }

[features]
default = []
embed-web = ["rust-embed"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
